    - Adjust initial sleep tick map
    - Return the hidden surface
    - Prepare to gather the initial sleep ticks programatically
    - Initial attempt at automated sampling
    - Get the expected 360 numbers
    - Illustrate how often it is ticking
    - Use hyphens for the morsecode
    - Track the held stack position
    - Prepare to idle the inserter when the hand did not move
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025. 01. 14
  Info:
    - Attempt to not need hold mode by having it in a chest for a tick
    - Force inserter back into drop mode
    - Run some burner inserter fuel usage tests
    - Simplify by using a burner instead of circuitry
    - Remove unused prototypes, and prevent fuel stealing
    - Rename the fuel (category)
    - Prevent bots from stealing the fuel
    - Update documentation
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 01. 13
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 01. 13
  Info:
    - Explode inserter when something enters the container
    - Cleanup entities when inserter goes away
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 01. 13
  Info:
    - Resurrect filter inserter as greedy inserter
    - Add thumbnail
    - Setup hidden surface
    - Start tracking placed greedy inserters
    - Prepare to use a mining drill as circuit trigger
    - Warn about the circuit network quirks
    - Step away from miner/resource for assembler/item
    - Stash vectored blueprint assembler
    - Setup the required hidden entities on the surface
    - Insert the initial blueprint
    - Remove pingpong mechanic for inconsistent behaviour
    - Make the assemblers arm eachother