@@ -17,6 +17,7 @@ Date: ????
     - Use hyphens for the morsecode
     - Track the held stack position
     - Prepare to idle the inserter when the hand did not move
+    - Fix first tick matching the same held stack position
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 2025. 01. 14
